--- a/package.json
+++ b/package.json
@@ -27,32 +27,40 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "^0.0.2",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "axios": "^0.22.0",
+    "class-transformer": "^0.4.0",
+    "es6-shim": "^0.35.6",
+    "nestjs-telegraf": "^2.4.0",
+    "nestjs-telegram": "^1.1.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.5"
+    "rxjs": "~6.5.5",
+    "telegraf": "^4.4.2"
   },
   "devDependencies": {
-    "@nrwl/workspace": "10.2.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.9.3",
-    "prettier": "2.0.4",
-    "@nrwl/nest": "10.2.0",
-    "@nrwl/jest": "10.2.0",
-    "jest": "26.2.2",
-    "@types/jest": "26.0.8",
-    "ts-jest": "26.1.4",
-    "@nrwl/node": "10.2.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/eslint-plugin-nx": "10.2.0",
-    "@typescript-eslint/parser": "2.19.2",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "eslint-config-prettier": "6.0.0"
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/nest": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
+    "@types/jest": "27.0.2",
+    "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
+    "dotenv": "10.0.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "27.2.3",
+    "prettier": "2.4.1",
+    "ts-jest": "27.0.5",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
+    "typescript": "4.3.5"
   }
 }
